--- a/QtWidgetsApplication1.ui
+++ b/QtWidgetsApplication1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>809</width>
-    <height>862</height>
+    <width>807</width>
+    <height>890</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,95 +30,46 @@
    <widget class="QPushButton" name="StartButton">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>760</y>
+      <x>240</x>
+      <y>650</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>Start</string>
+     <string>开    始</string>
     </property>
    </widget>
    <widget class="QPushButton" name="StopButton">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>760</y>
+      <x>470</x>
+      <y>650</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>Stop</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>540</x>
-      <y>760</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Close</string>
+     <string>停    止</string>
     </property>
    </widget>
    <widget class="QLabel" name="time1">
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>740</y>
-      <width>47</width>
-      <height>13</height>
+      <y>630</y>
+      <width>81</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>20</y>
-      <width>113</width>
-      <height>20</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>20</y>
-      <width>47</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>名 称</string>
     </property>
    </widget>
    <widget class="QLabel" name="camera2">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>330</y>
-      <width>291</width>
-      <height>191</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="camera3">
-    <property name="geometry">
-     <rect>
-      <x>450</x>
+      <x>430</x>
       <y>70</y>
       <width>291</width>
       <height>191</height>
@@ -128,13 +79,72 @@
      <string>TextLabel</string>
     </property>
    </widget>
-   <widget class="QLabel" name="camera4">
+   <widget class="QProgressBar" name="progressBar">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>330</y>
-      <width>291</width>
-      <height>191</height>
+      <x>140</x>
+      <y>600</y>
+      <width>551</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>24</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="progressLabel">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>580</y>
+      <width>501</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QTableWidget" name="sensortable">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>310</y>
+      <width>671</width>
+      <height>251</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="logBrowser">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>680</y>
+      <width>671</width>
+      <height>151</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="toolButton">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>20</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>选择文件夹</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="dirlabel">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>20</y>
+      <width>411</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -147,7 +157,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>809</width>
+     <width>807</width>
      <height>23</height>
     </rect>
    </property>
@@ -180,8 +190,8 @@
    <slot>start_botton_clicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>190</x>
-     <y>487</y>
+     <x>240</x>
+     <y>685</y>
     </hint>
     <hint type="destinationlabel">
      <x>262</x>
@@ -196,8 +206,8 @@
    <slot>stop_botton_clicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>373</x>
-     <y>487</y>
+     <x>470</x>
+     <y>685</y>
     </hint>
     <hint type="destinationlabel">
      <x>450</x>
@@ -206,18 +216,18 @@
    </hints>
   </connection>
   <connection>
-   <sender>pushButton</sender>
+   <sender>toolButton</sender>
    <signal>clicked()</signal>
    <receiver>QtWidgetsApplication1Class</receiver>
-   <slot>close_botton_clicked()</slot>
+   <slot>tool_botton_clicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>543</x>
-     <y>478</y>
+     <x>98</x>
+     <y>66</y>
     </hint>
     <hint type="destinationlabel">
-     <x>623</x>
-     <y>504</y>
+     <x>136</x>
+     <y>43</y>
     </hint>
    </hints>
   </connection>
@@ -226,5 +236,6 @@
   <slot>start_botton_clicked()</slot>
   <slot>stop_botton_clicked()</slot>
   <slot>close_botton_clicked()</slot>
+  <slot>tool_botton_clicked()</slot>
  </slots>
 </ui>
